# roboplc-middle

./: AGENTS.md  Cargo.toml  README.md  USAGE.md  config.example.toml  config.sample.toml  rust_out
.sisyphus/: boulder.json
.sisyphus/drafts/: async-architecture.md  current-architecture.md  heartbeat-refactor.md  modbus-worker-refactor.md  rpc-worker-deadlock-fix.md
.sisyphus/evidence/: task-1-cargo-init.txt  task-1-data-conversion-module.txt  task-2-structure.txt  task-3-types-extraction.txt  task-3-valid-config.txt  task-4-client-extraction.txt
.sisyphus/plans/: heartbeat-refactor.md  httpworker-api-fix.md  modbus-cleanup-refactor.md  modbus-refactor.md  modbus-worker-refactor.md  roboplc-feature-implementation.md  roboplc-middleware.md  rpc-deadlock-fix.md  rpc-worker-deadlock-fix.md
.sisyphus/research/: roboplc-async-support.md  roboplc-rpc-async.md  rpc-worker-async-design.md  rpc-worker-current-architecture.md
docs/: architecture.md  configuration.md  http-api.md  integration.md  troubleshooting.md
docs/configuration/: 配置管理.md
docs/messaging/: 消息传递机制.md
docs/testing/: 测试指南.md
docs/workers/: worker模块.md
examples/: config-basic.toml  config-multi-device.toml  register_rpc_demo.rs
src/: api.rs  config.rs  data_conversion.rs  lib.rs  main.rs  messages.rs
src/profiles/: device_profile.rs  mod.rs
src/workers/: AGENTS.md  config_loader.rs  config_updater.rs  http_worker.rs  (+6 more)
tests/: AGENTS.md  async_rpc_tests.rs  e2e_tests.rs  functional_config_tests.rs  functional_http_tests.rs  functional_worker_tests.rs  integration_tests.rs  mock_modbus.rs
(+18 files in other folders)
