[package]
name = "roboplc-middleware"
version = "0.1.0"
edition = "2021"
authors = ["Middleware Team"]
description = "Communication middleware converting JSON-RPC to Modbus TCP for PLCs and robot arms"
license = "Apache-2.0"

[dependencies]
roboplc = { version = "0.6", default-features = false, features = ["modbus", "locking-rt-safe"] }
binrw = "0.14"
roboplc-rpc = { version = "0.1", features = ["std"] }
rtsc = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros", "signal", "io-util", "rt-multi-thread"] }
notify = "6.1"
parking_lot_rt = "0.12"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
portpicker = "0.1"



[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0